--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -128,7 +128,6 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.147.97.190;
 allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -860,10 +859,10 @@ allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.254;
 allow 23.137.253.27;
+allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
-allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -924,6 +923,7 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
+allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
@@ -1630,6 +1630,7 @@ allow 71.19.144.106;
 allow 71.19.144.128;
 allow 72.14.179.10;
 allow 72.211.49.235;
+allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.237.235.148;
 allow 77.48.28.239;
