--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -129,6 +129,7 @@ deny 139.99.172.11;
 deny 139.99.8.57;
 deny 141.147.97.190;
 deny 141.98.11.62;
+deny 142.171.12.88;
 deny 142.44.133.81;
 deny 142.44.234.69;
 deny 144.172.118.161;
@@ -530,7 +531,6 @@ deny 185.40.4.44;
 deny 185.40.4.64;
 deny 185.40.4.92;
 deny 185.42.170.203;
-deny 185.56.171.94;
 deny 185.56.83.83;
 deny 185.67.82.114;
 deny 185.7.33.146;
@@ -1028,6 +1028,7 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
+deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::171;
 deny 2620:18c:0:192::172;
@@ -1366,7 +1367,6 @@ deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1395,7 +1395,6 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
-deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1495,7 +1494,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1736,7 +1734,6 @@ deny 94.142.244.16;
 deny 94.16.115.121;
 deny 94.16.116.81;
 deny 94.16.121.91;
-deny 94.177.106.236;
 deny 94.230.208.147;
 deny 94.230.208.148;
 deny 94.72.103.33;
