--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -98,6 +98,7 @@ set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
+set_real_ip_from 109.228.160.26;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -531,6 +532,7 @@ set_real_ip_from 185.40.4.44;
 set_real_ip_from 185.40.4.64;
 set_real_ip_from 185.40.4.92;
 set_real_ip_from 185.42.170.203;
+set_real_ip_from 185.56.171.94;
 set_real_ip_from 185.56.83.83;
 set_real_ip_from 185.67.82.114;
 set_real_ip_from 185.7.33.146;
@@ -800,6 +802,7 @@ set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:9b0:258:c600::1000;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:9e54::b;
 set_real_ip_from 2001:b030:2422::7234;
@@ -819,6 +822,7 @@ set_real_ip_from 204.85.191.7;
 set_real_ip_from 204.85.191.8;
 set_real_ip_from 204.85.191.9;
 set_real_ip_from 205.185.113.8;
+set_real_ip_from 205.185.114.112;
 set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
@@ -960,6 +964,7 @@ set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
+set_real_ip_from 2605:6400:20:117a:2605:6400:20:117a;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
@@ -1137,7 +1142,6 @@ set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:129:2098::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1484,6 +1488,7 @@ set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
+set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
 set_real_ip_from 38.242.242.246;
 set_real_ip_from 38.97.116.244;
@@ -1550,7 +1555,6 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -1666,7 +1670,6 @@ set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
-set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
